Removed Visitor Counting Functions (no direct way to share data between instances)

--- a/app/views/partials/common/footer.ejs
+++ b/app/views/partials/common/footer.ejs
@@ -1,12 +1,7 @@
 <footer id="footer" class="footer">
     <div id="cookieConsentHolder"></div>
 
-    <div class="daily-counter" title="Besucher heute">
-        <i class="fa fa-fw fa-clock" aria-hidden="true"></i>
-        <span id="dailyVisitors">
-            <%= visitorStats.dailyVisitors %>
-        </span>
-    </div>
+    <div class="daily-counter"> </div>
 
     <div class="footer-pun">
         <%- getFooterPun() %>
