Use Webp Background

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -6,7 +6,7 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-    background-image: url("/images/woodnew_double.jpg");
+    background-image: url("/images/woodnew_double.webp");
     background-position-y: bottom;
 }
 
