Mensa now has correct prices

--- a/app/views/partials/menu-lists/combined-menu-list.ejs
+++ b/app/views/partials/menu-lists/combined-menu-list.ejs
@@ -15,9 +15,14 @@
 
         <% singleMenu.entries.forEach(function(menuItem){ %>
             <li class="list-group-item">
-                <%= menuItem.name %>
+                <%= menuItem.name %> 
                 <% if(menuItem.allergens) { %> 
                     <span class="allergens"><%= menuItem.allergens %></span>
+                <% } %>
+                <% if(menuItem.price && !menuItem.isInfo) { %>
+                    <div class="price-tag">
+                            <%= menuItem.price + " €" %>
+                    </div>
                 <% } %>
             </li>
         <% }); %>
