--- a/app/views/partials/day.ejs
+++ b/app/views/partials/day.ejs
@@ -12,7 +12,7 @@
             <%- include('restaurant', {restaurant: 'mensa', restaurantName: 'Mensa', menu: mensa ? mensa[day] : null, combinedMenuList: true}) %>
         </div>
         <div class="col-xl-3 col-lg-6 col-md-12">
-            <%- include('restaurant', {restaurant: 'uniwirt', restaurantName: 'Uniwirt', menu: uniwirt ? uniwirt[day] : null}) %>
+            <%- include('restaurant', {restaurant: 'uniwirt', restaurantName: 'Uniwirt', menu: uniwirt ? uniwirt[day] : null, combinedMenuList: true}) %>
             <%- include('restaurant', {restaurant: 'uni-pizzeria', restaurantName: 'Uni-Pizzeria', menu: uniPizzeria ? uniPizzeria[day] : null}) %>
         </div>
         <div class="col-xl-3 col-lg-6 col-md-12">
