--- a/app/views/partials/menu-lists/combined-menu-list.ejs
+++ b/app/views/partials/menu-lists/combined-menu-list.ejs
@@ -2,7 +2,7 @@
 <%- include('starters', { starters: menu.starters }) %>
 
 <ul class="list-group combined-menu-list-group">
-    <% menu.mains.forEach((singleMenu, index) => { %>
+    <% (menu.mains || []).forEach((singleMenu, index) => { %>
         <li class="menu-title">
             <%= singleMenu.name %>
 
@@ -17,7 +17,7 @@
             <% } %>
         </li>
 
-        <% singleMenu.entries.forEach(function(menuItem){ %>
+        <% (singleMenu.entries || []).forEach(function(menuItem){ %>
             <li class="list-group-item">
                 <%= menuItem.name %> 
                 <% if(menuItem.allergens) { %> 
